app/main/default/objects/Lead/fields/metaDataTestInLead__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>metaDataTestInLead__c</fullName>
        <label>metaDataTestInLead</label>
        <length>225</length>
        <type>Text</type>
    </fields>
</CustomObject>