app/main/default/objects/Lead/fields/SICCode__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>