app/main/default/objects/Lead/listViews/InternationalLeads.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>InternationalLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>International Leads</label>
        <queue>InternationalLeads</queue>
    </listViews>
</CustomObject>