app/main/default/objects/Lead/listViews/USLeads.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>USLeads</fullName>
        <filterScope>Queue</filterScope>
        <label>US Leads</label>
        <queue>USLeads</queue>
    </listViews>
</CustomObject>